objects/Investor_Account__c.object
<CustomObject>
    <fields>
        <fullName>Solar_GB_CfD_Revenue__c</fullName>
        <label>Solar CfD Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Consultant_Revenue_Forecast__c</fullName>
        <label>Solar Consultant Revenue Forecast (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Cornwall_Revenue__c</fullName>
        <label>Solar Cornwall Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Curtailment_Consultant__c</fullName>
        <label>Solar Curtailment Consultant (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Curtailment_Grid_Operator__c</fullName>
        <label>Solar Curtailment Grid Operator (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_DD_Providers__c</fullName>
        <label>Solar - DD Providers (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_EPC_Provider__c</fullName>
        <label>Solar EPC Provider (GB)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Energy_Yield_Assessment__c</fullName>
        <label>Solar Energy Yield Assessment (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third_Party</fullName>
                    <label>Third Party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Financial_DD_Provider__c</fullName>
        <label>Solar - Financial - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_GCR_Ratio__c</fullName>
        <label>Solar GCR Ratio (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_GB_IRR_Fixed__c</fullName>
        <label>Solar IRR - Fixed (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_IRR_Merchant__c</fullName>
        <label>Solar IRR - Merchant (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Inflation_Notes__c</fullName>
        <label>Solar Inflation Notes (GB)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Inverter_Size_MW__c</fullName>
        <label>Solar Inverter Size MW (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Irradiance_options__c</fullName>
        <label>Solar Irradiance (options) (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GHI</fullName>
                </value>
                <value>
                    <fullName>Specific Production</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Legal_DD_Provider__c</fullName>
        <label>Solar - Legal - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Merchant_Revenue__c</fullName>
        <label>Solar Merchant Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Module_Size_W__c</fullName>
        <label>Solar Module Size W (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Consultant_Revenue__c</fullName>
        <label>Other - Solar Consultant Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Curtailment_Consultant__c</fullName>
        <label>Other - Solar Curtailment Consultant(GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Irradiance_Options__c</fullName>
        <label>Other - Solar Irradiance Options (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Revenue__c</fullName>
        <label>Other - Solar Revenue % (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Route_Rev_Forecast__c</fullName>
        <label>Other - Solar Route Rev Forecast (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Other_Route_to_Market__c</fullName>
        <label>Other - Solar Route to Market (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Outstanding Development Risk (GB)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_GB_PP_DD_Provider__c</fullName>
        <label>Solar - P&amp;P - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Pitch_m__c</fullName>
        <label>Solar Pitch (m) (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_GB_RPI_Inflation__c</fullName>
        <label>Solar RPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Solar Risk Investor Not Taking? (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Route_to_Market_Provider__c</fullName>
        <label>Solar Route to Market Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Route_to_Market_Rev_Forecast__c</fullName>
        <label>Solar Route to Market Rev Forecast (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Route_to_Market__c</fullName>
        <label>Solar Route to Market (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Size_Appetite__c</fullName>
        <label>Solar Size Appetite (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10 MW</fullName>
                </value>
                <value>
                    <fullName>10-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_GB_Specify_Consultant_Revenue__c</fullName>
        <label>Specify Solar Consultant Revenue % (GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Specify_Route_to_Market_Rev__c</fullName>
        <label>Specify Solar Route to Market Rev % (GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Technical_DD_Provider__c</fullName>
        <label>Solar - Technical - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Tilt_degrees__c</fullName>
        <label>Solar Tilt (degrees) (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_GB_Type_of_Inverter__c</fullName>
        <label>Solar Type of Inverter (GB)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Central Inverters</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Grid_Configuration__c</fullName>
        <label>Solar Grid Configuration</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Co-located with Batteries</fullName>
                </value>
                <value>
                    <fullName>Co-located with H2 Electrolyser</fullName>
                </value>
                <value>
                    <fullName>Hybrid</fullName>
                </value>
                <value>
                    <fullName>Standalone</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_3rd_Party_Energy_Assessment__c</fullName>
        <label>3rd Party - Solar Energy Assessment (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_AFRY_Revenue__c</fullName>
        <label>Solar AFRY Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Additional_Dev_Risk__c</fullName>
        <label>Additional Solar Dev Risk? (IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Aurora_Revenue__c</fullName>
        <label>Solar Aurora Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Baringa_Revenue__c</fullName>
        <label>Solar Baringa Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_CPI_Inflation__c</fullName>
        <label>Solar CPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_CPPA_Revenue__c</fullName>
        <label>Solar CPPA Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_CfD_Revenue__c</fullName>
        <label>Solar CfD Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Consultant_Revenue_Forecast__c</fullName>
        <label>Solar Consultant Revenue Forecast (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Cornwall_Revenue__c</fullName>
        <label>Solar Cornwall Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Curtailment_Consultant__c</fullName>
        <label>Solar Curtailment Consultant (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AFRY</fullName>
                </value>
                <value>
                    <fullName>Aurora</fullName>
                </value>
                <value>
                    <fullName>Baringa</fullName>
                </value>
                <value>
                    <fullName>Cornwall Insight</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Curtailment_Grid_Operator__c</fullName>
        <label>Solar Curtailment Grid Operator (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_DD_Providers__c</fullName>
        <label>Solar - DD Providers (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_EPC_Provider__c</fullName>
        <label>Solar EPC Provider (IE)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Energy_Yield_Assessment__c</fullName>
        <label>Solar Energy Yield Assessment (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>In-House</fullName>
                </value>
                <value>
                    <fullName>Third_Party</fullName>
                    <label>Third Party</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Financial_DD_Provider__c</fullName>
        <label>Solar - Financial - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_GCR_Ratio__c</fullName>
        <label>Solar GCR Ratio (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_IE_IRR_Fixed__c</fullName>
        <label>Solar IRR - Fixed (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_IRR_Merchant__c</fullName>
        <label>Solar IRR - Merchant (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Inflation_Notes__c</fullName>
        <label>Solar Inflation Notes (IE)</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Inverter_Size_MW__c</fullName>
        <label>Solar Inverter Size MW (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Irradiance_options__c</fullName>
        <label>Solar Irradiance (options) (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>GHI</fullName>
                </value>
                <value>
                    <fullName>Specific Production</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Legal_DD_Provider__c</fullName>
        <label>Solar - Legal - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Merchant_Revenue__c</fullName>
        <label>Solar Merchant Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Module_Size_W__c</fullName>
        <label>Solar Module Size W (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Consultant_Revenue__c</fullName>
        <label>Other - Solar Consultant Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Curtailment_Consultant__c</fullName>
        <label>Other - Solar Curtailment Consultant(IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Irradiance_Options__c</fullName>
        <label>Other - Solar Irradiance Options (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Revenue__c</fullName>
        <label>Other - Solar Revenue % (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Route_Rev_Forecast__c</fullName>
        <label>Other - Solar Route Rev Forecast (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Other_Route_to_Market__c</fullName>
        <label>Other - Solar Route to Market (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Outstanding_Development_Risk__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Solar Outstanding Development Risk (IE)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Solar_IE_PP_DD_Provider__c</fullName>
        <label>Solar - P&amp;P - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Pitch_m__c</fullName>
        <label>Solar Pitch (m) (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_IE_RPI_Inflation__c</fullName>
        <label>Solar RPI Inflation (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Risk_Investor_Not_Taking__c</fullName>
        <inlineHelpText>Specify Outstanding Development Risk that the investor is not comfortable taking?</inlineHelpText>
        <label>Solar Risk Investor Not Taking? (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grid Price</fullName>
                </value>
                <value>
                    <fullName>Grid Route</fullName>
                </value>
                <value>
                    <fullName>Grid Connection Offer</fullName>
                </value>
                <value>
                    <fullName>Grid Planning</fullName>
                </value>
                <value>
                    <fullName>Option Lease Completed</fullName>
                </value>
                <value>
                    <fullName>Title Matters</fullName>
                </value>
                <value>
                    <fullName>Procurement</fullName>
                </value>
                <value>
                    <fullName>Auction / Route to Market</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>JR Risk</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Route_to_Market_Provider__c</fullName>
        <label>Solar Route to Market Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Route_to_Market_Rev_Forecast__c</fullName>
        <label>Solar Route to Market Rev Forecast (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Route_to_Market__c</fullName>
        <label>Solar Route to Market (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Merchant</fullName>
                </value>
                <value>
                    <fullName>CfD</fullName>
                </value>
                <value>
                    <fullName>CPPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Size_Appetite__c</fullName>
        <label>Solar Size Appetite (IE)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>&lt;10 MW</fullName>
                </value>
                <value>
                    <fullName>10-50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;50 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;100 MW</fullName>
                </value>
                <value>
                    <fullName>&gt;300 MW</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_IE_Specify_Consultant_Revenue__c</fullName>
        <label>Specify Solar Consultant Revenue % (IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Specify_Route_to_Market_Rev__c</fullName>
        <label>Specify Solar Route to Market Rev%(IE)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Technical_DD_Provider__c</fullName>
        <label>Solar - Technical - DD Provider (IE)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Tilt_degrees__c</fullName>
        <label>Solar Tilt (degrees) (IE)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Solar_IE_Type_of_Inverter__c</fullName>
        <label>Solar Type of Inverter (IE)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Central Inverters</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Interest_in_which_Region__c</fullName>
        <label>Solar Interest in which Region?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>GB</fullName>
                </value>
                <value>
                    <fullName>Northern Ireland</fullName>
                </value>
                <value>
                    <fullName>Republic of Ireland</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Solar_Other_Service_Not_Available__c</fullName>
        <label>Other - Solar Service Not Available</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Solar_Service_Not_Available_to_RES__c</fullName>
        <label>Which Service is Not Available to RES?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>EPC</fullName>
                </value>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>O&amp;M</fullName>
                </value>
                <value>
                    <fullName>PPA</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Standard_Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Standard Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>M_A_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Storage_Additional_Comments__c</fullName>
        <label>Storage Additional Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Additional_Dev_Risk__c</fullName>
        <label>Additional Storage Dev Risk? (GB)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Battery_Augmentation__c</fullName>
        <label>Battery Augmentation (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Battery_Manufacturer__c</fullName>
        <label>Battery Manufacturer (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BYD</fullName>
                </value>
                <value>
                    <fullName>Narada</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Samsung</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_CPI_Inflation__c</fullName>
        <label>Storage CPI Inflation (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Cycling_Rate__c</fullName>
        <label>Storage Cycling Rate (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Storage_GB_DD_Providers__c</fullName>
        <label>Storage - DD Providers (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Legal</fullName>
                </value>
                <value>
                    <fullName>Property &amp; Planning</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_Duration_Appetite__c</fullName>
        <label>Storage Duration Appetite (GB)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0.5hr</fullName>
                </value>
                <value>
                    <fullName>1hr</fullName>
                </value>
                <value>
                    <fullName>1.5hr</fullName>
                </value>
                <value>
                    <fullName>2hr</fullName>
                </value>
                <value>
                    <fullName>other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Storage_GB_EPC_Provider__c</fullName>
        <label>Storage EPC Provider (GB)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_Financial_DD_Provider__c</fullName>
        <label>Storage - Financial - DD Provider (GB)</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Storage_GB_IRR__c</fullName>
        <label>Storage IRR (GB)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>